# ServantRestService

./: .gitignore  README.md  ServantRestService.cabal  stack.yaml
app/: Main.hs
src/: Description.hs  Docs.hs  Entities.hs  EntityService.hs  JsonPersistence.hs  Lib.hs  SwaggerEntityService.hs  Todo.hs  UiExample.hs
src/Servant/Exception/: Server.hs
test/: Spec.hs
