name:                ServantRestService
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/ServantRestService#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2019 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib, Docs, Todo, UiExample, Entities, SimplePersistence, JsonPersistence, EntityService
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , aeson-pretty
                     , servant-server
                     , servant
                     , servant-docs
                     , servant-swagger
                     , servant-swagger-ui
                     , servant-swagger-ui-core
                     , servant-swagger-ui-redoc
                     , servant-swagger-ui-jensoleg >= 0.3.3
                     , swagger2
                     , string-conversions
                     , libiserv
                     , base-compat-batteries
                     , time
                     , wai
                     , warp
                     , bytestring
                     , http-types
                     , text
                     , lens
                     , transformers
                     , directory
  default-language:    Haskell2010

executable ServantRestService-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , ServantRestService
  default-language:    Haskell2010

test-suite ServantRestService-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , ServantRestService
                     , hspec
                     , hspec-wai
                     , hspec-wai-json
                     , aeson
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/ServantRestService
